# nanograd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
demos/: char_lm.py  xor_mlp.py
src/nanograd/: __init__.py  nn.py  optim.py  tensor.py
tests/: test_gradients.py  test_nn.py
